# ScriptForge-AI

./: .gitignore  README.md
artifacts/: make_demo_video.py
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  main.py  models.py
backend/app/api/: router.py  routes.py
backend/app/api/routes/: convert.py  sample.py
backend/app/core/: config.py
backend/app/pipeline/: __init__.py  adapter.py  chapter_parser.py  errors.py  provider_factory.py  service.py  validator.py  yaml_builder.py
backend/app/providers/: __init__.py  base.py  llm_provider.py  mock_provider.py
backend/app/schemas/: __init__.py  screenplay.schema.json
backend/app/services/: conversion_service.py
backend/tests/: test_pipeline.py
docs/: demo-script.md  market-research.md  pr-plan.md  screenplay-yaml-schema.md  submission-checklist.md
docs/superpowers/specs/: 2026-06-07-ai-novel-to-screenplay-design.md
frontend/: README.md  index.html  package.json  pnpm-lock.yaml
frontend/src/: App.vue  style.css
frontend/src/api/: conversion.ts
frontend/src/components/: AppHeader.vue  NovelInputPanel.vue  ResultPanel.vue  StageList.vue  SummaryGrid.vue
frontend/src/composables/: useConversion.ts
frontend/src/types/: conversion.ts
samples/: novel_3_chapters.txt  output_script.yaml
