[project]
name = "novel-screenplay-backend"
version = "0.1.0"
description = "AI-assisted novel to YAML short-drama screenplay backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "jsonschema>=4.23.0",
    "pydantic>=2.10.0",
    "pyyaml>=6.0.2",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
